Fix Settings alignment in tree-view-open-files

--- a/styles.less
+++ b/styles.less
@@ -69,7 +69,7 @@ atom-text-editor::shadow .gutter {
     font-size: 10px;
     margin-right: 4px;
     position: relative;
-    transform: translateY(-20%);
+    transform: translateY(-5%);
   }
 }
 
@@ -165,7 +165,8 @@ atom-workspace > atom-workspace-axis > atom-panel-container.left > atom-panel > 
       margin-left: -4px;
 
       &[data-name="untitled"],
-      &[data-name="Project Find Results"] {
+      &[data-name="Project Find Results"],
+      &[data-name="Settings"] {
         left: 3px;
         line-height: 27px !important;
 
